--- a/Blog.Web/Blog.Web.csproj
+++ b/Blog.Web/Blog.Web.csproj
@@ -41,7 +41,7 @@
     </None>
   </ItemGroup>
 
-  <Target Name="PreBuild" BeforeTargets="Build" Condition="'$(Configuration)' == 'Release' ">
+  <Target Name="PreBuild" BeforeTargets="Publish" Condition="'$(Configuration)' == 'Release' ">
     <Message Text="Launch ng build" />
     <Exec Command="npm run build" WorkingDirectory="angular" />
      <Message Text="ng build Ok" />
