--- a/Blog.Web/Blog.Web.csproj
+++ b/Blog.Web/Blog.Web.csproj
@@ -7,7 +7,7 @@
     <DefaultItemExcludes>angular\node_modules\**;$(DefaultItemExcludes)</DefaultItemExcludes>
   </PropertyGroup>
   <ItemGroup>
-  <!-- New Meta Package has SpaServices in It -->
+    <!-- New Meta Package has SpaServices in It -->
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="NETStandard.Library" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
@@ -33,17 +33,11 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Update="angular\dist-server\main.bundle.js">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Update="angular\server.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="angular\dist-server\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
-
-  <Target Name="PreBuild" BeforeTargets="Publish" Condition="'$(Configuration)' == 'Release' ">
-    <Message Text="Launch ng build" />
-    <Exec Command="npm run build" WorkingDirectory="angular" />
-     <Message Text="ng build Ok" />
-  </Target>
 </Project>
