--- a/Blog.Web/angular/ngsw-config.json
+++ b/Blog.Web/angular/ngsw-config.json
@@ -6,8 +6,7 @@
       "installMode": "prefetch",
       "resources": {
         "files": [
-          "/favicon.ico",
-          "/index.html"
+          "/favicon.ico"
         ],
         "versionedFiles": [
           "/*.bundle.css",
