--- a/Blog.Web/angular/package.json
+++ b/Blog.Web/angular/package.json
@@ -26,10 +26,7 @@
     "@nguniversal/aspnetcore-engine": "^5.0.0-beta.5",
     "@nguniversal/common": "^5.0.0-beta.5",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
-    "@types/node": "^9.4.6",
-    "adal-ts": "^0.6.0",
     "aspnet-prerendering": "^3.0.1",
-    "aspnet-webpack": "^2.0.3",
     "auth0-js": "^9.3.0",
     "js-cookie": "^2.2.0",
     "moment": "^2.20.1",
@@ -44,25 +41,11 @@
   "devDependencies": {
     "@angular/cli": "1.7.2",
     "@angular/service-worker": "5.2.7",
-    "@ngtools/webpack": "^1.10.1",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.8.4",
-    "chai": "^4.1.2",
+    "@types/node": "^9.4.6",
     "codelyzer": "^4.0.2",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine-core": "^2.8.0",
-    "karma": "^2.0.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.1.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-remap-coverage": "^0.1.4",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.9",
     "tslint": "^5.9.1",
-    "typescript": "2.6.2",
-    "webpack-bundle-analyzer": "^2.9.2"
+    "typescript": "2.6.2"
   }
 }
