--- a/Blog.Web/appsettings.json
+++ b/Blog.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Data": {
     "BlogConnection": {
-      "ConnectionString": "Server=.;Database=Blog;MultipleActiveResultSets=true;User ID=bloguser;Password=password;"
+      "ConnectionString": "Server=home.ovent.net;Database=Blog;MultipleActiveResultSets=true;User ID=bloguser;Password=password;"
     }
   },
   "Security": {
