--- a/Blog.Web/angular/tsconfig.json
+++ b/Blog.Web/angular/tsconfig.json
@@ -4,6 +4,8 @@
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "emitDecoratorMetadata": true,
     "baseUrl": ".",
     "experimentalDecorators": true,
