--- a/Blog.Web/angular/package.json
+++ b/Blog.Web/angular/package.json
@@ -3,49 +3,51 @@
   "version": "1.0.0",
   "scripts": {
     "lint": "tslint -p tsconfig.json",
-    "build": "ng build --prod  --output-hashing=none && ng build --prod --app server --output-hashing=none",
-    "build:server": "ng build --prod --app server --output-hashing=none",
-    "build:client": "ng build --prod  --output-hashing=none",
+    "build": "npm run build:client && npm run build:server",
+    "build:server": "ng run angular:server",
+    "build:client": "ng build --prod",
     "clean": "rimraf wwwroot/dist clientapp/dist",
     "start": "ng serve & "
   },
   "dependencies": {
-    "@angular/animations": "5.2.7",
-    "@angular/cdk": "^5.2.2",
-    "@angular/common": "5.2.7",
-    "@angular/compiler": "5.2.7",
-    "@angular/compiler-cli": "5.2.7",
-    "@angular/core": "5.2.7",
-    "@angular/forms": "5.2.7",
-    "@angular/http": "5.2.7",
-    "@angular/material": "^5.2.2",
-    "@angular/platform-browser": "5.2.7",
-    "@angular/platform-browser-dynamic": "5.2.7",
-    "@angular/platform-server": "5.2.7",
-    "@angular/router": "5.2.7",
-    "@nguniversal/aspnetcore-engine": "^5.0.0-beta.6",
-    "@nguniversal/common": "^5.0.0-beta.6",
-    "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.6",
+    "@angular/animations": "6.0.0",
+    "@angular/cdk": "6.0.1",
+    "@angular/common": "6.0.0",
+    "@angular/compiler": "6.0.0",
+    "@angular/compiler-cli": "6.0.0",
+    "@angular/core": "6.0.0",
+    "@angular/forms": "6.0.0",
+    "@angular/http": "6.0.0",
+    "@angular/material": "6.0.1",
+    "@angular/platform-browser": "6.0.0",
+    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/platform-server": "6.0.0",
+    "@angular/router": "6.0.0",
+    "@nguniversal/aspnetcore-engine": "6.0.0",
+    "@nguniversal/common": "6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "6.0.0",
     "aspnet-prerendering": "^3.0.1",
     "auth0-js": "^9.3.0",
     "js-cookie": "^2.2.0",
     "moment": "^2.20.1",
     "ngx-disqus": "^2.3.7",
-    "ngx-markdown": "^1.5.1",
-    "preboot": "^6.0.0-beta.3",
+    "ngx-markdown": "^1.6.0",
+    "preboot": "6.0.0-beta.3",
     "prismjs": "^1.11.0",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "slug": "^0.9.1",
-    "zone.js": "^0.8.20"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.2",
-    "@angular/service-worker": "5.2.7",
+    "@angular/cli": "6.0.0",
+    "@angular/service-worker": "6.0.0",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.8.4",
     "@types/node": "^9.4.6",
     "codelyzer": "^4.0.2",
     "tslint": "^5.9.1",
-    "typescript": "2.6.2"
+    "typescript": "2.7.2",
+    "@angular-devkit/build-angular": "~0.6.0"
   }
 }
