--- a/Blog.Web/appsettings.json
+++ b/Blog.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Data": {
     "BlogConnection": {
-      "ConnectionString": "connectionString"
+      "ConnectionString": "Server=willovent-blog-tmp.database.windows.net;Database=Blog;MultipleActiveResultSets=true;User ID=bloguser;Password=P@ssw0rd;"
     }
   },
   "Security": {
