--- a/Blog.Web/angular/package.json
+++ b/Blog.Web/angular/package.json
@@ -10,38 +10,37 @@
     "start": "ng serve & "
   },
   "dependencies": {
-    "@angular/animations": "6.0.0",
-    "@angular/cdk": "6.0.1",
-    "@angular/common": "6.0.0",
-    "@angular/compiler": "6.0.0",
-    "@angular/compiler-cli": "6.0.0",
-    "@angular/core": "6.0.0",
-    "@angular/forms": "6.0.0",
-    "@angular/http": "6.0.0",
-    "@angular/material": "6.0.1",
-    "@angular/platform-browser": "6.0.0",
-    "@angular/platform-browser-dynamic": "6.0.0",
-    "@angular/platform-server": "6.0.0",
-    "@angular/router": "6.0.0",
+    "@angular/animations": "6.0.3",
+    "@angular/cdk": "6.2.0",
+    "@angular/common": "6.0.3",
+    "@angular/compiler": "6.0.3",
+    "@angular/compiler-cli": "6.0.3",
+    "@angular/core": "6.0.3",
+    "@angular/forms": "6.0.3",
+    "@angular/http": "6.0.3",
+    "@angular/material": "6.2.0",
+    "@angular/platform-browser": "6.0.3",
+    "@angular/platform-browser-dynamic": "6.0.3",
+    "@angular/platform-server": "6.0.3",
+    "@angular/router": "6.0.3",
     "@nguniversal/aspnetcore-engine": "6.0.0",
     "@nguniversal/common": "6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "6.0.0",
     "aspnet-prerendering": "^3.0.1",
-    "auth0-js": "^9.3.0",
+    "auth0-js": "9.6.0",
     "js-cookie": "^2.2.0",
-    "moment": "^2.20.1",
+    "moment": "2.22.2",
     "ngx-disqus": "^2.3.7",
-    "ngx-markdown": "^1.6.0",
-    "preboot": "6.0.0-beta.3",
-    "prismjs": "^1.11.0",
-    "rxjs": "^6.1.0",
-    "rxjs-compat": "^6.1.0",
-    "slug": "^0.9.1",
-    "zone.js": "^0.8.26"
+    "ngx-markdown": "6.0.1",
+    "preboot": "6.0.0-beta.4",
+    "prismjs": "^1.14.0",
+    "rxjs": "^6.2.0",
+    "slug": "0.9.1",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.0",
-    "@angular/service-worker": "6.0.0",
+    "@angular/cli": "6.0.7",
+    "@angular/service-worker": "6.0.3",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.8.4",
     "@types/node": "^9.4.6",
